Check for index validity when deleting file

Can't reproduce the bug on master, but I can reproduce it with distro Kate.
Regardles, this change should make it safer

BUG: 494099